<resources>
    <string name="app_name">AbandonedPets</string>
    <string name="all">전체</string>
    <string name="dog">강아지</string>
    <string name="cat">고양이</string>
    <string name="etc">기타</string>
    <string name="thumbnail">미리보기 이미지</string>
    <string name="filter">필터</string>
    <string name="address">지역 : %s</string>
    <string name="gender">성별 : %s</string>
    <string name="neuter">중성화 : %s</string>
    <string name="state">상태 : %s</string>
    <string name="total">가족을 기다리는 %s마리의 동물들</string>
    <string name="term">기간</string>
    <string name="btn_text_species">축종</string>
    <string name="btn_text_address">지역</string>
    <string name="btn_text_gender">성별</string>
    <string name="btn_text_neuter">중성화 여부</string>
    <string name="male">수컷</string>
    <string name="female">암컷</string>
    <string name="neutered">중성화 됨</string>
    <string name="unneutered">중성화 안됨</string>
    <string name="day">하루</string>
    <string name="week">일주일</string>
    <string name="month">한 달</string>
    <string name="shelter">보호센터</string>
    <string name="competent_authority">관할기관</string>
    <string name="call">보호소에 연락하기</string>
    <string name="details_title">당신의 입양을 기다리고 있어요</string>
    <string name="notice_number">공고번호 : %s</string>
    <string name="age">나이 : %s</string>
    <string name="color">털색 : %s</string>
    <string name="features">특징 : %s</string>
    <string name="weight">체중 : %s</string>
    <string name="shelter_name">센터명 : %s</string>
    <string name="phone">연락처 : %s</string>
    <string name="shelter_address">보호장소 : %s</string>
    <string name="organize_name">담당자 : %s</string>
    <string name="notice_date">공고기한: %s ~ %s</string>
    <string name="happen_place">발견장소 : %s</string>
</resources>