<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="listener"
            type="com.project.abandonedpets.view.ItemClickListener" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">

            <TextView
                android:id="@+id/term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_filter_btn"
                android:gravity="center"
                android:onClick="@{(view)->listener.onClick(view)}"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/term"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_filter_btn"
                android:gravity="center"
                android:onClick="@{(view)->listener.onClick(view)}"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_text_species"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_filter_btn"
                android:onClick="@{(view)->listener.onClick(view)}"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_text_address"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_filter_btn"
                android:onClick="@{(view)->listener.onClick(view)}"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_text_gender"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/neuter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_filter_btn"
                android:onClick="@{(view)->listener.onClick(view)}"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_text_neuter"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />
    </LinearLayout>
</layout>